minor edits to update form, fix show map button showing on firefox when there are no coords

--- a/client/src/css/About.css
+++ b/client/src/css/About.css
@@ -1,5 +1,5 @@
 .main-container {
-  height: calc(100vh - 85px);
+  height: calc(100vh - 86px);
 }
 
 .about-container,
